--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         </div>
     </section>
     <section class="banner3" id="experiencia-profissional">
+        <img class="parallax-img" src="./shared/img/down.png" id="down">
         <div class="banner3-context">
             <h2>Experiencia Profissional</h2>
             <div class="banner3-list-background">
@@ -75,7 +76,7 @@
         let btn = document.getElementById("btn");
         let mountains_front = document.getElementById("mountains_front");
         let header = document.getElementById("header");
-
+        let down = document.getElementById("down");
         window.addEventListener('scroll', function(){
             let value = window.scrollY;
             stars.style.left = value * 0.25 + 'px';
@@ -86,7 +87,7 @@
             text.style.marginTop = value * 1.5 + 'px';
             btn.style.marginTop = value * 1.5 + 'px';
             header.style.marginTop = value * 0.5 + 'px';
-
+            down.style.marginTop = value * 0.5 + 'px';
         })
     </script>
     <footer class="body-footer">
